# scatter

./: .gitignore  Cargo.toml  README.md
scenes/: smallpt.json
src/: bxdf.rs  camera.rs  integrator.rs  lib.rs  light.rs  main.rs  material.rs  math.rs  montecarlo.rs  parse.rs  ray.rs  renderer.rs  scene.rs  spectrum.rs  surface.rs  texture.rs  transform.rs
