[package]
name = "scatter"
version = "0.1.0"
authors = ["acolley <alnessy@hotmail.com>"]

[dependencies]
alga = "0.5.1"
approx = "0.1.1"
bitflags = "0.9.1"
clap = "2.24.2"
image = "0.13.0"
nalgebra = "0.12.3"
ncollide = "0.12.0"
rand = "0.3.15"
serde_json = "1.0.2"
tobj = "0.0.9"

[dependencies.uuid]
version = "0.5.0"
features = ["v4"]